crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__record_fields_source_order.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\ntype alias point = { z : unit, a : unit }\nf flag =\n    { a = (case flag of\n               True -> ())\n    , z = (case flag of\n               False -> ())\n    }\n"
info: diagnostic
---
nash::pattern::incomplete

  × Case expression is not exhaustive.
    ╭─[Main.nash:8:12]
  7 │     f flag =
  8 │ ╭─▶     { a = (case flag of
  9 │ ╰─▶                True -> ())
 10 │         , z = (case flag of
    ╰────
  help: Missing patterns:

            False

        Add the missing branches; use `todo` for unfinished bodies.

nash::pattern::incomplete

  × Case expression is not exhaustive.
    ╭─[Main.nash:10:12]
  9 │                    True -> ())
 10 │ ╭─▶     , z = (case flag of
 11 │ ╰─▶                False -> ())
 12 │         }
    ╰────
  help: Missing patterns:

            True

        Add the missing branches; use `todo` for unfinished bodies.
