crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__string_escapes_round_trip.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
expression: rendered
---
"a\"\\\n\r\t\u{0000}\u{001b}λ"
